fixes for projects pages on mobile

--- a/src/projects/projects.module.css
+++ b/src/projects/projects.module.css
@@ -38,5 +38,7 @@
 }
 
 .languagesSection {
+  margin-left: 20px;
+  margin-right: 20px;
   margin-bottom: 40px;
 }
