--- a/src/projects/ui/languages/languages.module.css
+++ b/src/projects/ui/languages/languages.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
-  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 20px;
 }
 
 .pill {
